--- a/index.html
+++ b/index.html
@@ -814,6 +814,26 @@ oneSignal_options['notifyButton']['text'] = {};
 			</div>
 	</div>
 	</section>
+	<section class="has-padding" id="contact">
+		<div class="container">
+			<div class="row">
+				<div class="text-center section-heading">
+					<h2 class="light-section-heading">Fom</h2>
+					<!-- <div class="section-sub-heading">And we'll reply in no time</div> -->
+				</div>
+			</div>
+			<div class="row">
+
+
+				<div style="font-size:24px;color:#000000;text-align:justify;padding:1em;text-align:center!important"
+					class="support-line text-center">
+					<a href="./form.html"> buy form </a>
+				</div>
+
+			</div>
+		</div>
+		</div>
+	</section>
 
 	</div>
 	<footer id="footer" class="site-footer">
