--- a/index.html
+++ b/index.html
@@ -279,8 +279,8 @@ oneSignal_options['notifyButton']['text'] = {};
 								<li class="menu-item menu-item-type-custom menu-item-object-custom"><a
 										href="https://colorlib.com/pixova-lite/#testimonials"
 										title="Testimonials">Testimonials</a></li>
-								<li class="menu-item menu-item-type-custom menu-item-object-custom"><a
-										href="https://colorlib.com/pixova-lite/#team" title="Team">Team</a></li>
+								<li class="menu-item menu-item-type-custom menu-item-object-custom"><a href="./#team"
+										title="Team">Team</a></li>
 								<li class="menu-item menu-item-type-custom menu-item-object-custom"><a
 										href="https://colorlib.com/pixova-lite/#news" title="News">News</a></li>
 								<li class="menu-item menu-item-type-custom menu-item-object-custom"><a
