--- a/index.html
+++ b/index.html
@@ -271,20 +271,19 @@ oneSignal_options['notifyButton']['text'] = {};
 							id="nav-expander" class="pull-right" href="#"><i class="fa fa-bars fa-lg white"></i></a>
 						<nav class="main-navigation logo-image">
 							<ul id="menu-pixova-lite-main-menu-container" class="pixova-default-menu">
-								<li class="menu-item menu-item-type-custom menu-item-object-custom"><a
-										href="https://colorlib.com/pixova-lite/#about" title="About">About</a></li>
-								<li class="menu-item menu-item-type-custom menu-item-object-custom"><a
-										href="https://colorlib.com/pixova-lite/#works" title="Recent Works">Recent
+								<li class="menu-item menu-item-type-custom menu-item-object-custom"><a href="./#about"
+										title="About">About</a></li>
+								<li class="menu-item menu-item-type-custom menu-item-object-custom"><a href="./#works"
+										title="Recent Works">Recent
 										Works</a></li>
 								<li class="menu-item menu-item-type-custom menu-item-object-custom"><a
-										href="https://colorlib.com/pixova-lite/#testimonials"
-										title="Testimonials">Testimonials</a></li>
+										href="./#testimonials" title="Testimonials">Testimonials</a></li>
 								<li class="menu-item menu-item-type-custom menu-item-object-custom"><a href="./#team"
 										title="Team">Team</a></li>
-								<li class="menu-item menu-item-type-custom menu-item-object-custom"><a
-										href="https://colorlib.com/pixova-lite/#news" title="News">News</a></li>
-								<li class="menu-item menu-item-type-custom menu-item-object-custom"><a
-										href="https://colorlib.com/pixova-lite/#contact" title="Contact">Contact</a>
+								<li class="menu-item menu-item-type-custom menu-item-object-custom"><a href="./#news"
+										title="News">News</a></li>
+								<li class="menu-item menu-item-type-custom menu-item-object-custom"><a href="./#contact"
+										title="Contact">Contact</a>
 								</li>
 							</ul>
 						</nav>
