--- a/form.html
+++ b/form.html
@@ -116,7 +116,7 @@
 				</div>
 
 				<div class="container-contact100-form-btn">
-					<button class="contact100-form-btn">
+					<button class="contact100-form-btn" onclick="window.location.href='./#pay_success.html'">
 						转账完成并发送
 					</button>
 				</div>
