--- a/pay_success.html
+++ b/pay_success.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Contact V17</title>
+    <title>B-wallet</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!--===============================================================================================-->
@@ -59,6 +59,12 @@
                 <span class="contact100-form-title">
                     填写用户信息
                 </span>
+                <!-- 请输入您的卡号 -->
+                <label class="label-input100" for="email">卡号 *</label>
+                <div class="wrap-input100 validate-input" data-validate="Valid email is required: ex@abc.xyz">
+                    <input id="first-name" class="input100" type="text" name="email" placeholder="请输入您的卡号">
+                    <span class="focus-input100"></span>
+                </div>
 
                 <label class="label-input100" for="first-name">姓名 *</label>
                 <div class="wrap-input100 rs1-wrap-input100 validate-input" data-validate="Type first name">
@@ -70,17 +76,19 @@
                     <span class="focus-input100"></span>
                 </div>
 
+                <label class="label-input100" for="email">生日 *</label>
+                <div class="wrap-input100 validate-input" data-validate="Valid email is required: ex@abc.xyz">
+                    <input id="first-name" class="input100" type="text" name="email" placeholder="1970-01-01">
+                    <span class="focus-input100"></span>
+                </div>
+
                 <label class="label-input100" for="email">邮箱 *</label>
                 <div class="wrap-input100 validate-input" data-validate="Valid email is required: ex@abc.xyz">
                     <input id="first-name" class="input100" type="text" name="email"
                         placeholder="Eg. example@email.com">
                     <span class="focus-input100"></span>
                 </div>
-                <label class="label-input100" for="email">确认邮箱 *</label>
-                <div class="wrap-input100 validate-input" data-validate="Valid email is required: ex@abc.xyz">
-                    <input id="email" class="input100" type="text" name="email" placeholder="Eg. example@email.com">
-                    <span class="focus-input100"></span>
-                </div>
+
 
 
 
@@ -122,57 +130,10 @@
                 </div>
             </form>
 
-            <!-- <div class="contact100-more flex-col-c-m" style="background-image: url('images/bg-01.jpg');">
-				<div class="flex-w size1 p-b-47">
-					<div class="txt1 p-r-25">
-						<span class="lnr lnr-map-marker"></span>
-					</div>
 
-					<div class="flex-col size2">
-						<span class="txt1 p-b-20">
-							银行名称
-						</span>
-
-						<span class="txt2">
-							XXXXXXXXXXXXXX
-						</span>
-					</div>
-				</div>
-
-				<div class="dis-flex size1 p-b-47">
-					<div class="txt1 p-r-25">
-						<span class="lnr lnr-phone-handset"></span>
-					</div>
-
-					<div class="flex-col size2">
-						<span class="txt1 p-b-20">
-							银行卡号
-						</span>
-
-						<span class="txt3">
-							XXXXXXXXXXXXXX
-						</span>
-					</div>
-				</div>
-
-				<div class="dis-flex size1 p-b-47">
-					<div class="txt1 p-r-25">
-						<span class="lnr lnr-envelope"></span>
-					</div>
-
-					<div class="flex-col size2">
-						<span class="txt1 p-b-20">
-							客服支持
-						</span>
-
-						<span class="txt3">
-							080XXXXXXXX
-						</span>
-					</div>
-				</div>
-			</div>
-		</div> -->
         </div>
+
+
 
 
 
