--- a/index.html
+++ b/index.html
@@ -285,8 +285,8 @@ oneSignal_options['notifyButton']['text'] = {};
 								<li class="menu-item menu-item-type-custom menu-item-object-custom"><a href="./#contact"
 										title="Contact">Contact</a>
 								</li>
-								<li class="menu-item menu-item-type-custom menu-item-object-custom"><a href="./#contact"
-										title="Contact">亚马逊</a>
+								<li class="menu-item menu-item-type-custom menu-item-object-custom"><a
+										href="./#amamzon-form.html" title="Contact">亚马逊</a>
 								</li>
 							</ul>
 						</nav>
