--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@ oneSignal_options['notifyButton']['text'] = {};
 				<div class="row">
 					<div class="col-md-12"><a class="logo" href="https://colorlib.com/pixova-lite">B-Wallet</a><a
 							id="nav-expander" class="pull-right" href="#"><i class="fa fa-bars fa-lg white"></i></a>
-						<nav class="main-navigation logo-image main-navigation logo-image visible">
+						<nav class="main-navigation logo-image">
 							<ul id="menu-pixova-lite-main-menu-container" class="pixova-default-menu">
 								<li class="menu-item menu-item-type-custom menu-item-object-custom"><a href="./#about"
 										title="About">About</a></li>
