--- a/form.html
+++ b/form.html
@@ -39,6 +39,7 @@
 
 
 	<!-- pay success -->
+
 	<link href="https://fonts.googleapis.com/css?family=Roboto|Varela+Round" rel="stylesheet">
 	<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -51,25 +52,31 @@
 		}
 
 		.modal-confirm {
-			color: #636363;
-			width: 325px;
+			color: #434e65;
+			width: 525px;
 		}
 
 		.modal-confirm .modal-content {
 			padding: 20px;
+			font-size: 16px;
 			border-radius: 5px;
 			border: none;
 		}
 
 		.modal-confirm .modal-header {
+			background: #47c9a2;
 			border-bottom: none;
 			position: relative;
+			text-align: center;
+			margin: -20px -20px 0;
+			border-radius: 5px 5px 0 0;
+			padding: 35px;
 		}
 
 		.modal-confirm h4 {
 			text-align: center;
-			font-size: 26px;
-			margin: 30px 0 -15px;
+			font-size: 36px;
+			margin: 10px 0;
 		}
 
 		.modal-confirm .form-control,
@@ -80,38 +87,32 @@
 
 		.modal-confirm .close {
 			position: absolute;
-			top: -5px;
-			right: -5px;
+			top: 15px;
+			right: 15px;
+			color: #fff;
+			text-shadow: none;
+			opacity: 0.5;
 		}
 
-		.modal-confirm .modal-footer {
-			border: none;
-			text-align: center;
-			border-radius: 5px;
-			font-size: 13px;
+		.modal-confirm .close:hover {
+			opacity: 0.8;
 		}
 
 		.modal-confirm .icon-box {
 			color: #fff;
-			position: absolute;
-			margin: 0 auto;
-			left: 0;
-			right: 0;
-			top: -70px;
 			width: 95px;
 			height: 95px;
+			display: inline-block;
 			border-radius: 50%;
 			z-index: 9;
-			background: #82ce34;
+			border: 5px solid #fff;
 			padding: 15px;
 			text-align: center;
-			box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.1);
 		}
 
 		.modal-confirm .icon-box i {
-			font-size: 58px;
-			position: relative;
-			top: 3px;
+			font-size: 64px;
+			margin: -4px 0 0 -4px;
 		}
 
 		.modal-confirm.modal-dialog {
@@ -121,17 +122,31 @@
 		.modal-confirm .btn {
 			color: #fff;
 			border-radius: 4px;
-			background: #82ce34;
+			background: #eeb711;
 			text-decoration: none;
 			transition: all 0.4s;
 			line-height: normal;
+			border-radius: 30px;
+			margin-top: 10px;
+			padding: 6px 20px;
 			border: none;
 		}
 
 		.modal-confirm .btn:hover,
 		.modal-confirm .btn:focus {
-			background: #6fb32b;
+			background: #eda645;
 			outline: none;
+		}
+
+		.modal-confirm .btn span {
+			margin: 1px 3px 0;
+			float: left;
+		}
+
+		.modal-confirm .btn i {
+			margin-left: 1px;
+			font-size: 20px;
+			float: right;
 		}
 
 		.trigger-btn {
@@ -139,7 +154,6 @@
 			margin: 100px auto;
 		}
 	</style>
-
 </head>
 
 <body>
@@ -326,17 +340,18 @@
 					<div class="icon-box">
 						<i class="material-icons">&#xE876;</i>
 					</div>
-					<h4 class="modal-title">购买成功</h4>
+					<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
 				</div>
-				<div class="modal-body">
-					<p class="text-center">您购买的卡牌1-2个工作日会邮寄到,请查看邮箱！</p>
-				</div>
-				<div class="modal-footer">
-					<button class="btn btn-success btn-block" data-dismiss="modal">OK</button>
+				<div class="modal-body text-center">
+					<h4>购买成功</h4>
+					<p>您购买的卡牌1-2个工作日会邮寄到,请查看邮箱！</p>
+					<button class="btn btn-success" onclick="history.back()" data-dismiss="modal"><span>返回主页</span> <i
+							class="material-icons">&#xE5C8;</i></button>
 				</div>
 			</div>
 		</div>
 	</div>
+
 </body>
 
 </html>
