--- a/form.html
+++ b/form.html
@@ -159,7 +159,7 @@
 <body>
 
 
-	<div id="container" class="hfeed">
+	<!-- <div id="container" class="hfeed">
 		<header id="header-wrap">
 			<div class="container header clearfix">
 				<div class="row">
@@ -170,7 +170,7 @@
 			</div>
 
 		</header>
-	</div>
+	</div> -->
 
 	<div class="container-contact100">
 		<div class="wrap-contact100">
