--- a/index.html
+++ b/index.html
@@ -26,6 +26,12 @@
 		href="https://colorlib.com/pixova-lite/feed/" />
 	<link rel="alternate" type="application/rss+xml" title="B-wallet &raquo; Comments Feed"
 		href="https://colorlib.com/pixova-lite/comments/feed/" />
+	<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+		integrity="sha256-pasqAKBDmFT4eHoN2ndd6lN370kFiGUFyTiUHWhU7k8=" crossorigin="anonymous"></script>
+	<script src="./language/language_en.js"></script>
+	<script src="./language/language_jp.js"></script>
+	<script src="./language/language_ch.js"></script>
+	<script src="./js/language.js"></script>
 
 	<script type="text/javascript" data-cfasync="false">
 		var mi_version = '7.7.0';
@@ -526,7 +532,8 @@ oneSignal_options['notifyButton']['text'] = {};
 			<div class="container">
 				<div class="row">
 					<div class="text-center section-heading">
-						<h2 class="light-section-heading">取扱説明書</h2>
+						<h2 class="light-section-heading" data-action="msg_12"></h2>
+
 						<div class="section-sub-heading"><a href="./file/btc-payment.pdf">ここにダウンロードできます（download）</a>
 						</div>
 					</div>
@@ -826,6 +833,8 @@ var pixova_lite_localization = {"animations_enabled":"animations_enabled"};
 	<script src="./assets/js/rocket-loader.min.js" data-cf-settings="57873d8da7be07fe6597e55b-|49" defer=""></script>
 	<script src="assets/js/util.js"></script> <!-- util functions included in the CodyHouse framework -->
 	<script src="assets/js/main.js"></script>
+
+
 </body>
 
 </html>
