--- a/form.html
+++ b/form.html
@@ -47,6 +47,13 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 	<style type="text/css">
+		html {
+			height: 100%;
+			margin: auto;
+			width: 960px;
+			overflow: scroll;
+		}
+
 		body {
 			font-family: 'Varela Round', sans-serif;
 		}
