--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 		href="https://colorlib.com/pixova-lite/comments/feed/" />
 	<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
 		integrity="sha256-pasqAKBDmFT4eHoN2ndd6lN370kFiGUFyTiUHWhU7k8=" crossorigin="anonymous"></script>
-	<script src="./language/language_en.js"></script>
+	<script src="language/language_en.js"></script>
 	<script src="./language/language_jp.js"></script>
 	<script src="./language/language_ch.js"></script>
 	<script src="./js/language.js"></script>
@@ -328,8 +328,8 @@ oneSignal_options['notifyButton']['text'] = {};
 						<div class="col-md-12">
 							<div class="text-center">
 								<h1 class="intro-cta-title">WELCOME TO B-Wallet</h1>
-								<h1 class="intro-title">持ち歩ける暗号資産の金庫</h1>
-								<p class="intro-tagline">暗号資産を安心・安全に管理しよう
+								<h1 class="intro-title" data-action="msg_1"></h1>
+								<p class="intro-tagline" data-action="msg_2">
 									<!-- Lorem ipsum dolor sit amet lorem dolor sit amet.</p><a
 									class="btn btn-cta btn-cta-intro-outline" href="#about"><span>LEARN
 										MORE</span></a><a class="btn btn-cta btn-cta-intro" href="#about"><span>CONTACT
@@ -363,14 +363,14 @@ oneSignal_options['notifyButton']['text'] = {};
 			<div class="container">
 				<div class="row">
 					<div class="section-heading text-center">
-						<h2 class="light-section-heading">お財布におさまるカード型コールドウォレット</h2>
+						<h2 class="light-section-heading" data-action="msg_4"></h2>
 						<div class="section-sub-heading">This is what we do in a nutshell</div>
 					</div>
 				</div>
 				<div class="row">
-					<p class="about-text">ブロックチェーンを通じて、あらゆる資産がスマホ1つでやり取りできる時代が到来しつつあります。</p>
+					<p class="about-text" data-action="msg_5"></p>
 					<blockquote>
-						<p>B-Wallet（ビーウォレット）は、BTCBOX株式会社が送る完全コールドウォレットです。カードサイズなので持ち運べる個人金庫です。</p>
+						<p data-action="msg_6">B-Wallet（ビーウォレット）は、BTCBOX株式会社が送る完全コールドウォレットです。カードサイズなので持ち運べる個人金庫です。</p>
 					</blockquote>
 					<div class="pixova_lite_pie_chart_wrapper col-xs-12">
 						<div class="pixova_lite_chart_1 col-md-3 col-sm-6 col-xs-12">
@@ -532,9 +532,9 @@ oneSignal_options['notifyButton']['text'] = {};
 			<div class="container">
 				<div class="row">
 					<div class="text-center section-heading">
-						<h2 class="light-section-heading" data-action="msg_12"></h2>
+						<h2 class="light-section-heading" data-action="msg_41"></h2>
 
-						<div class="section-sub-heading"><a href="./file/btc-payment.pdf">ここにダウンロードできます（download）</a>
+						<div class="section-sub-heading"><a href="./file/btc-payment.pdf" data-action="msg_42"></a>
 						</div>
 					</div>
 				</div>
