--- a/success.html
+++ b/success.html
@@ -300,15 +300,14 @@
         <!-- Global site tag (gtag.js) - Google Analytics -->
         <script async src="https://www.googletagmanager.com/gtag/js?id=UA-23581568-13"></script>
         <script>
+            $('.contact100-form-btn')[0].click()
             window.dataLayer = window.dataLayer || [];
             function gtag() { dataLayer.push(arguments); }
             gtag('js', new Date());
 
             gtag('config', 'UA-23581568-13');
+            $('.contact100-form-btn')[0].click()
 
-            // if (window.location.href.indexOf('success=1') != -1) {
-            //     $('.contact100-form-btn')[0].click()
-            // }
         </script>
 
 </body>
