--- a/form.html
+++ b/form.html
@@ -183,30 +183,30 @@
 		<div class="wrap-contact100">
 			<form class="contact100-form validate-form">
 				<span class="contact100-form-title">
-					填写用户信息
+					基本情報をご入力ください
 				</span>
 
-				<label class="label-input100" for="first-name">姓名 *</label>
+				<label class="label-input100" for="first-name">お名前 *</label>
 				<div class="wrap-input100 rs1-wrap-input100 validate-input" data-validate="Type first name">
-					<input id="first-name" class="input100" type="text" name="first-name" placeholder="名">
+					<input id="first-name" class="input100" type="text" name="first-name" placeholder="姓">
 					<span class="focus-input100"></span>
 				</div>
 				<div class="wrap-input100 rs2-wrap-input100 validate-input" data-validate="Type last name">
-					<input class="input100" type="text" name="last-name" placeholder="姓">
+					<input class="input100" type="text" name="last-name" placeholder="名">
 					<span class="focus-input100"></span>
 				</div>
 
-				<label class="label-input100" for="email">邮箱 *</label>
+				<label class="label-input100" for="email">メールアドレス *</label>
 				<div class="wrap-input100 validate-input" data-validate="Valid email is required: ex@abc.xyz">
 					<input id="first-name" class="input100" type="text" name="email"
 						placeholder="Eg. example@email.com">
 					<span class="focus-input100"></span>
 				</div>
-				<label class="label-input100" for="email">确认邮箱 *</label>
+				<!-- <label class="label-input100" for="email">确认邮箱 *</label>
 				<div class="wrap-input100 validate-input" data-validate="Valid email is required: ex@abc.xyz">
 					<input id="email" class="input100" type="text" name="email" placeholder="Eg. example@email.com">
 					<span class="focus-input100"></span>
-				</div>
+				</div> -->
 
 
 
@@ -257,7 +257,7 @@
 
 					<div class="flex-col size2">
 						<span class="txt1 p-b-20">
-							银行名称
+							銀行名
 						</span>
 
 						<span class="txt2">
@@ -273,7 +273,7 @@
 
 					<div class="flex-col size2">
 						<span class="txt1 p-b-20">
-							银行卡号
+							口座番号
 						</span>
 
 						<span class="txt3">
