--- a/success.html
+++ b/success.html
@@ -172,34 +172,34 @@
         <div class="wrap-contact100">
             <form action='/insert' method="post" class="contact100-form validate-form" style='width:100%'>
                 <span class="contact100-form-title">
-                    填写用户信息
+                    基本情報をご入力ください
                 </span>
                 <!-- 请输入您的卡号 -->
-                <label class="label-input100" for="card_id">卡号 *</label>
+                <label class="label-input100" for="card_id">カード番号 *</label>
                 <div class="wrap-input100 validate-input" data-validate="Valid email is required: ex@abc.xyz">
-                    <input id="card_id" class="input100" type="text" name="card_id" placeholder="请输入您的卡号">
+                    <input id="card_id" class="input100" type="text" name="card_id" placeholder="お客様のカード番号をご入力ください">
                     <span class="focus-input100"></span>
                 </div>
 
-                <label class="label-input100" for="name">姓名 *</label>
+                <label class="label-input100" for="name">お名前 *</label>
                 <div class="wrap-input100 rs1-wrap-input100 validate-input" data-validate="Type first name">
-                    <input id="name" class="input100" type="text" name="name" placeholder="名">
+                    <input id="name" class="input100" type="text" name="name" placeholder="姓">
                     <span class="focus-input100"></span>
                 </div>
                 <div class="wrap-input100 rs2-wrap-input100 validate-input" data-validate="Type last name">
-                    <input class="input100" type="text" name="last-name" placeholder="姓">
+                    <input class="input100" type="text" name="last-name" placeholder="名">
                     <span class="focus-input100"></span>
                 </div>
 
-                <label class="label-input100" for="birthday">生日 *</label>
+                <label class="label-input100" for="birthday">生年月日 *</label>
                 <div class="wrap-input100 validate-input" data-validate="Valid email is required: ex@abc.xyz">
                     <input id="birthday" class="input100" type="text" name="birthday" placeholder="1970-01-01">
                     <span class="focus-input100"></span>
                 </div>
 
-                <label class="label-input100" for="mail">邮箱 *</label>
+                <label class="label-input100" for="mail">メールアドレス *</label>
                 <div class="wrap-input100 validate-input" data-validate="Valid email is required: ex@abc.xyz">
-                    <input id="mail" class="input100" type="text" name="mail" placeholder="Eg. example@email.com">
+                    <input id="mail" class="input100" type="text" name="mail" placeholder="例：wallet@emai.com">
                     <span class="focus-input100"></span>
                 </div>
 
@@ -220,7 +220,7 @@
 				</div> -->
 
 
-                <label class="label-input100" for="post_code">邮编</label>
+                <label class="label-input100" for="post_code">郵便番号</label>
                 <div class="wrap-input100  rs1-wrap-input100 ">
                     <input id="post_code" class="input100 rs1-wrap-input100" type="text" name="post_code"
                         placeholder="113">
@@ -233,7 +233,7 @@
                 </div>
 
 
-                <label class="label-input100" for="address">地址 *</label>
+                <label class="label-input100" for="address">住所 *</label>
                 <div class="wrap-input100 validate-input" data-validate="Message is required">
                     <textarea id="address" class="input100" name="address" placeholder="Write us a message"></textarea>
                     <span class="focus-input100"></span>
