--- a/form.html
+++ b/form.html
@@ -224,7 +224,7 @@
 				</div> -->
 
 
-				<label class="label-input100" for="phone">邮编</label>
+				<label class="label-input100" for="phone">郵便番号</label>
 				<div class="wrap-input100  rs1-wrap-input100 ">
 					<input id="phone" class="input100 rs1-wrap-input100" type="text" name="phone" placeholder="113">
 					<span class="focus-input100"></span>
