--- a/index.html
+++ b/index.html
@@ -680,7 +680,7 @@ oneSignal_options['notifyButton']['text'] = {};
 			<div class="row">
 				<section class="pixova-footer-widget col-md-4 clearfix">
 					<div id="text-3" class="widget widget_text">
-						<!-- <h3 class="widget-title"><span>サポート</span></h3>
+						<h3 class="widget-title"><span>サポート</span></h3>
 						<div class="textwidget">
 							<p>B-Walletのご利用について、ご不明な点につきましては、
 								カスタマーセンターまでお問い合わせください。
@@ -688,7 +688,7 @@ oneSignal_options['notifyButton']['text'] = {};
 									03-xxxx-xxxx（平日9:00～17:00 ※年末年始を除く）
 								</p>
 							</p>
-						</div> -->
+						</div>
 					</div>
 				</section>
 				<section class="pixova-footer-widget col-md-4 clearfix">
