--- a/form.html
+++ b/form.html
@@ -235,7 +235,7 @@
 				</div>
 
 
-				<label class="label-input100" for="message">地址 *</label>
+				<label class="label-input100" for="message">住所 *</label>
 				<div class="wrap-input100 validate-input" data-validate="Message is required">
 					<textarea id="message" class="input100" name="message" placeholder="Write us a message"></textarea>
 					<span class="focus-input100"></span>
