--- a/index.html
+++ b/index.html
@@ -280,8 +280,7 @@ oneSignal_options['notifyButton']['text'] = {};
 								<li class="menu-item menu-item-type-custom menu-item-object-custom"><a href="./#about"
 										title="About">About</a></li>
 								<li class="menu-item menu-item-type-custom menu-item-object-custom"><a href="./#works"
-										title="Recent Works">Recent
-										Works</a></li>
+										title="Recent Works">利用形態</a></li>
 								<li class="menu-item menu-item-type-custom menu-item-object-custom"><a
 										href="./#testimonials" title="Testimonials">Testimonials</a></li>
 								<li class="menu-item menu-item-type-custom menu-item-object-custom"><a href="./#team"
@@ -364,7 +363,7 @@ oneSignal_options['notifyButton']['text'] = {};
 				<div class="row">
 					<div class="section-heading text-center">
 						<h2 class="light-section-heading" data-action="msg_4"></h2>
-						<div class="section-sub-heading">This is what we do in a nutshell</div>
+						<!-- <div class="section-sub-heading">This is what we do in a nutshell</div> -->
 					</div>
 				</div>
 				<div class="row">
@@ -469,7 +468,7 @@ oneSignal_options['notifyButton']['text'] = {};
 				<div class="row">
 					<div class="text-center section-heading">
 						<h2 class="light-section-heading">暗号資産を安全に保管</h2>
-						<div class="section-sub-heading">We don't like to brag, others do it for us.</div>
+						<!-- <div class="section-sub-heading">We don't like to brag, others do it for us.</div> -->
 					</div>
 				</div>
 				<div class="row">
@@ -530,7 +529,8 @@ oneSignal_options['notifyButton']['text'] = {};
 					<div class="text-center section-heading">
 						<h2 class="light-section-heading" data-action="msg_41"></h2>
 
-						<div class="section-sub-heading"><a href="./file/btc-payment.pdf" data-action="msg_42"></a>
+						<div class="section-sub-heading"><a target="_blank" rel="noopener noreferrer"
+								href="./file/btc-payment.pdf" data-action="msg_42"></a>
 						</div>
 					</div>
 				</div>
